fix[frontend]: button overflow fixed

--- a/apps/frontend/src/common/pages/signInPage/SignInPage.module.scss
+++ b/apps/frontend/src/common/pages/signInPage/SignInPage.module.scss
@@ -8,7 +8,6 @@
 
     > a,
     > a > button {
-        width: 15rem;
         margin: 0 auto;
     }
 }
